--- a/pages/modelo.html
+++ b/pages/modelo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -47,11 +47,12 @@
             resto do conteúdo
         </section>
     </main>
-    
+
     <footer>
         <div class="limite-container">
-           <section>
-                <a href="./home.html"><img class="logo" src="../assets/images/variante-logo.png" alt="logo da manual do tempo"></a>
+            <section>
+                <a href="./home.html"><img class="logo" src="../assets/images/variante-logo.png"
+                        alt="logo da manual do tempo"></a>
                 <p>© 2025 Manual do Tempo. Todos os direitos reservados</p>
             </section>
             <nav>
