Estrutura e estilização de links na pagina home.html

--- a/pages/home.html
+++ b/pages/home.html
@@ -58,7 +58,7 @@
                     </button>
                 </form>
 
-                <div id="weather">
+                <div id="weather" class="show">
                     <h1 id="title">Sao Paulo, BR</h1>
 
                     <div id="infos">
@@ -133,22 +133,34 @@
             <h2>Acesse as dicas de como se preparar</h2>
             <ul class="lista-dicas">
                 <li>
-                    <p>Ondas de calor</p>
-                    <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                    <a href="./">
+                        <p>Ondas de calor</p>
+                        <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                    </a>
                 </li>
                 <li>
-                    <p>Frio extremo</p>
-                    <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                    <a href="./">
+                        <p>Frio extremo</p>
+                        <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                    </a>
                 </li>
                 <li>
-                    <p>Chuvas intensas</p>
-                    <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                    <a href="./">
+                        <p>Chuvas intensas</p>
+                        <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                    </a>
                 </li>
                 <li>
-                    <p>Ventos fortes</p>
-                    <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                    <a href="./">
+                        <p>Ventos fortes</p>
+                        <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                    </a>
                 </li>
             </ul>
+        </section>
+        <section class="alerta-section">
+            <h2>Checar se tem alertas para sua região</h2>
+            <a class="botao" href="./">Verificar Alertas</a>
         </section>
     </main>
 
