Adição das funcionalidades em home.html

--- a/pages/home.html
+++ b/pages/home.html
@@ -47,6 +47,7 @@
             <h1>Página Inicial</h1>
             <p>Breve descrição ou algo do tipo</p>
         </section>
+        
         <!-- CLIMA API WIDGET -->
         <section class="clima-section">
             <div id="container">
@@ -133,25 +134,25 @@
             <h2>Acesse as dicas de como se preparar</h2>
             <ul class="lista-dicas">
                 <li>
-                    <a href="./">
+                    <a href="./dicas.html">
                         <p>Ondas de calor</p>
                         <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
-                    <a href="./">
+                    <a href="./dicas.html">
                         <p>Frio extremo</p>
                         <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
-                    <a href="./">
+                    <a href="./dicas.html">
                         <p>Chuvas intensas</p>
                         <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
-                    <a href="./">
+                    <a href="./dicas.html">
                         <p>Ventos fortes</p>
                         <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
                     </a>
@@ -159,8 +160,27 @@
             </ul>
         </section>
         <section class="alerta-section">
-            <h2>Checar se tem alertas para sua região</h2>
-            <a class="botao" href="./">Verificar Alertas</a>
+            <h2>Checar locais seguros e se tem alertas para sua região</h2>
+            <form id="pesquisar-local">
+                <i class="fa-solid fa-location-dot"></i>
+                <input type="search" name="localizacao" id="localizacao" placeholder="Informe sua localização">
+            </form>
+            <div>
+                <a id="alertas" class="botao">Verificar Alertas</a>
+                <a id="abrigos" class="botao">Conferir abrigos</a>
+            </div>
+
+            <dialog>
+                <div class="fechar"></div>
+                <h2>Alerta de Evento Climático</h2>
+                <p class="nome">Evento climático aqui</p>
+                <p class="instrucao">Instrução se tiver evento</p>
+            </dialog>
+        </section>
+        <section class="modo-panico">
+            <h2>Modo Pânico</h2>
+            <p>Envie sua localização para um contato de emergência.</p>
+
         </section>
     </main>
 
