Alterações na estilização das funcionalidades da home

--- a/pages/abrigos.html
+++ b/pages/abrigos.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manual do Tempo - Modelo</title>
+    <title>Manual do Tempo - Locais seguros</title>
 
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/abrigos.css">
     <script src="../assets/js/scripts.js" defer></script>
 </head>
 
@@ -40,11 +41,52 @@
 
     <main>
         <section class="titulo">
-            <h1>Título</h1>
-            <p>Breve descrição ou algo do tipo</p>
+            <h1>Locais seguros</h1>
+            <p>Encontre abrigos na sua região</p>
         </section>
-        <section>
-            resto do conteúdo
+        <section class="abrigos-container">
+            <ul class="abrigos">
+                <li>
+                    <img src="../assets/images/modelo.png" alt="imagem do abrigo">
+                    <div class="avaliacao">
+                        <span class="estrela"></span>
+                    </div>
+                    <p>Endereço</p>
+                    <p>(11) 91234-5678</p>
+                    <p>Horario de atendimento: <span class="horario-atendimento">6h - 18h</span></p>
+                    <a href="#" class="botao">Conferir Rotas</a>
+                </li>
+                <li>
+                    <img src="../assets/images/modelo.png" alt="imagem do abrigo">
+                    <div class="avaliacao">
+                        <span class="estrela"></span>
+                    </div>
+                    <p>Endereço</p>
+                    <p>(11) 91234-5678</p>
+                    <p>Horario de atendimento: <span class="horario-atendimento">6h - 18h</span></p>
+                    <a href="#" class="botao">Conferir Rotas</a>
+                </li>
+                <li>
+                    <img src="../assets/images/modelo.png" alt="imagem do abrigo">
+                    <div class="avaliacao">
+                        <span class="estrela"></span>
+                    </div>
+                    <p>Endereço</p>
+                    <p>(11) 91234-5678</p>
+                    <p>Horario de atendimento: <span class="horario-atendimento">6h - 18h</span></p>
+                    <a href="#" class="botao">Conferir Rotas</a>
+                </li>
+                <li>
+                    <img src="../assets/images/modelo.png" alt="imagem do abrigo">
+                    <div class="avaliacao">
+                        <span class="estrela"></span>
+                    </div>
+                    <p>Endereço</p>
+                    <p>(11) 91234-5678</p>
+                    <p>Horario de atendimento: <span class="horario-atendimento">6h - 18h</span></p>
+                    <a href="#" class="botao">Conferir Rotas</a>
+                </li>
+            </ul>
         </section>
     </main>
 
