Add: Conteudo (FAQ), perguntas frequentes e respostas

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -53,45 +53,45 @@
             <ul class="perguntas">
                 <li>
                     <div class="pergunta">
-                        <p>Pergunta 1</p>
+                        <p>O site mostra a previsão do tempo em tempo real?</p>
                         <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
-                    <p class="resposta">Resposta da pergunta</p>
+                    <p class="resposta">Sim! Usamos a API OpenWeather para mostrar a previsão do dia da sua cidade, atualizada automaticamente.</p>
                 </li>
                 <li>
                     <div class="pergunta">
-                        <p>Pergunta 1</p>
+                        <p>Como acessar o chatbot de ajuda?</p>
                         <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
-                    <p class="resposta">Resposta da pergunta</p>
+                    <p class="resposta">Você pode clicar no botão no lado inferior direito da pagina ou do Telegram para falar com nosso assistente. Ele responde dúvidas de forma simples e rápida.</p>
                 </li>
                 <li>
                     <div class="pergunta">
-                        <p>Pergunta 1</p>
+                        <p>O site envia alertas automáticos se houver risco climático?</p>
                         <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
-                    <p class="resposta">Resposta da pergunta</p>
+                    <p class="resposta">Ainda não. Mas em breve teremos envio automático de alertas por clima e localização.</p>
                 </li>
                 <li>
                     <div class="pergunta">
-                        <p>Pergunta 1</p>
+                        <p>As dicas funcionam mesmo se eu estiver sem internet?</p>
                         <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
-                    <p class="resposta">Resposta da pergunta</p>
+                    <p class="resposta">O site não funciona offline de forma automática, mas você pode tirar print das páginas de dicas para consultar mesmo sem internet.</p>
                 </li>
                 <li>
                     <div class="pergunta">
-                        <p>Pergunta 1</p>
+                        <p>O Manual do Tempo funciona em Libras?</p>
                         <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
-                    <p class="resposta">Resposta da pergunta</p>
+                    <p class="resposta">Sim! Temos integração com a API VLibras. Basta clicar no ícone azul com o símbolo de Libras.</p>
                 </li>
                 <li>
                     <div class="pergunta">
-                        <p>Pergunta 1</p>
+                        <p>Como saber o que fazer em caso de enchente ou alagamento?</p>
                         <img src="../assets/images/icone-seta.png" alt="icone de seta">
                     </div>
-                    <p class="resposta">Resposta da pergunta</p>
+                    <p class="resposta">Nossa página de dicas explica o passo a passo do que fazer em cada evento climático, inclusive em enchentes. Basta clicar no tipo de evento e seguir as instruções.</p>
                 </li>
             </ul>
         </section>
