add: conteudo valores, icons e estilizacao no quemsomos.css

--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -46,13 +46,10 @@
         </section>
         <section>
             <div class="resumo">
-                <p>Manual do Tempo é uma plataforma digital composta por um site e um chatbot de prevenção para ajudar a
-                    população a se proteger durante eventos climáticos extremos: ondas de calor, frio intenso, chuvas
-                    fortes e ventos perigosos.</p>
+                <p>O Manual do Tempo é uma plataforma digital composta por um site e um chatbot de prevenção. Nossa missão é orientar a população sobre como agir durante eventos climáticos extremos, como ondas de calor, frio intenso, chuvas fortes e ventos perigosos.</p>
                 <img src="../assets/images/modelo.png" alt="imagem de apresentação">
             </div>
-            <p> A proposta nasce da necessidade real de orientar a população com antecedência, agilidade e simplicidade,
-                especialmente grupos vulneráveis.</p>
+            <p>Criamos uma solução simples, acessível e eficiente para que qualquer pessoa, com qualquer nível de conhecimento digital, saiba como se proteger — antes, durante e depois de uma emergência climática.</p>
         </section>
         <section class="valores-container">
             <p>Nosso diferencial é unir acessibilidade + simplicidade + prevenção real em uma solução escalável e
@@ -60,19 +57,22 @@
             <div class="valores">
                 <ul>
                     <li>
-                        <img src="../assets/images/modelo.png" alt="icone de ">
-                        <p>Valor 1</p>
+                        <img src="../assets/images/valores_acessibilidade.svg" alt="icone de acessibilidade">
+                        <div class="valores_conteudo"><h4>Acessibilidade total</h4>
+                        <p>Suporte completo em Libras, leitura em voz e navegação inclusiva para garantir que todos tenham acesso às informações.</p></div>
                     </li>
                     <li>
-                        <img src="../assets/images/modelo.png" alt="icone de ">
-                        <p>Valor 2</p>
+                        <img src="../assets/images/valores_nuvem.svg" alt="icone de nuvem">
+                        <div class="valores_conteudo"><h4>Simplicidade e funcionalidade</h4>
+                        <p>Interface clara, instruções objetivas e foco na ação rápida. Sem distrações, só o que importa.</p></div>
                     </li>
                     <li>
-                        <img src="../assets/images/modelo.png" alt="icone de ">
-                        <p>Valor 3</p>
+                        <img src="../assets/images/valores_prevencao.svg" alt="icone de prevencao">
+                        <div class="valores_conteudo"><h4>Prevenção com impacto social</h4>
+                        <p>Nosso foco não é tecnologia pela tecnologia, mas salvar vidas com informação útil e orientação eficaz.</p></div>
                     </li>
                 </ul>
-                <img src="../assets/images/modelo.png" alt="imagem de ">
+                <img src="../assets/images/modelo.png" alt="imagem d ">
             </div>
         </section>
         <section class="integrantes">
