Add: imagens das paginas home e quemsomos + conteudos nas breves descricoes e estilizacao das imagens

--- a/pages/home.html
+++ b/pages/home.html
@@ -45,7 +45,7 @@
     <main>
         <section class="titulo">
             <h1>Página Inicial</h1>
-            <p>Breve descrição ou algo do tipo</p>
+            <p>Seu guia diário para enfrentar o clima com segurança e clareza.</p>
         </section>
 
         <!-- CLIMA API WIDGET -->
@@ -85,10 +85,10 @@
                             <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="">
                             <div>
                                 <p id="temp_value">
-                                    32
+                                    -- <sup>°C</sup>
                                 </p>
                                 <p id="temp_description">
-                                    Ensolarado
+                                    Nublado
                                 </p>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                                     <h2>temp. max</h2>
 
                                     <p id="temp_max">
-                                        32 <sup>°C</sup>
+                                        -- <sup>°C</sup>
                                     </p>
                                 </div>
                             </div>
@@ -113,7 +113,7 @@
                                     <h2>temp. min</h2>
 
                                     <p id="temp_min">
-                                        11 <sup>°C</sup>
+                                        -- <sup>°C</sup>
                                     </p>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                                     <h2>Umidade</h2>
 
                                     <p id="humidity">
-                                        50%
+                                        --
                                     </p>
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
                                     <h2>Vento</h2>
 
                                     <p id="wind">
-                                        50 km/h
+                                        -- km/h
                                     </p>
                                 </div>
                             </div>
@@ -154,25 +154,25 @@
                 <li>
                     <a href="./dicas.html">
                         <p>Ondas de calor</p>
-                        <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                        <img src="../assets/images/onda-de-calor.png" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
                     <a href="./dicas.html">
                         <p>Frio extremo</p>
-                        <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                        <img src="../assets/images/frio_extremo.svg" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
                     <a href="./dicas.html">
                         <p>Chuvas intensas</p>
-                        <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                        <img src="../assets/images/chuvas_intensas.svg" alt="imagem de onda de calor">
                     </a>
                 </li>
                 <li>
                     <a href="./dicas.html">
                         <p>Ventos fortes</p>
-                        <img src="../assets/images/modelo.png" alt="imagem de onda de calor">
+                        <img src="../assets/images/ventos_fortes.svg" alt="imagem de onda de calor">
                     </a>
                 </li>
             </ul>
