--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -42,12 +42,12 @@
     <main id="quemsomos">
         <section class="titulo">
             <h1>Quem Somos</h1>
-            <p>Breve descrição ou algo do tipo</p>
+            <p>Tecnologia simples para proteger você dos extremos do clima.</p>
         </section>
         <section>
             <div class="resumo">
                 <p>O Manual do Tempo é uma plataforma digital composta por um site e um chatbot de prevenção. Nossa missão é orientar a população sobre como agir durante eventos climáticos extremos, como ondas de calor, frio intenso, chuvas fortes e ventos perigosos.</p>
-                <img src="../assets/images/modelo.png" alt="imagem de apresentação">
+                <img src="../assets/images/weather_quemsomos.svg" alt="imagem de apresentação">
             </div>
             <p>Criamos uma solução simples, acessível e eficiente para que qualquer pessoa, com qualquer nível de conhecimento digital, saiba como se proteger — antes, durante e depois de uma emergência climática.</p>
         </section>
@@ -72,7 +72,7 @@
                         <p>Nosso foco não é tecnologia pela tecnologia, mas salvar vidas com informação útil e orientação eficaz.</p></div>
                     </li>
                 </ul>
-                <img src="../assets/images/modelo.png" alt="imagem d ">
+                <img src="../assets/images/undraw_online-information_hhp2.svg" alt="imagem de uma pessoa vendo a pagina">
             </div>
         </section>
         <section class="integrantes">
