add conteudo pagina index

--- a/index.html
+++ b/index.html
@@ -30,34 +30,36 @@
     <main id="landingpage">
         <section class="hero">
             <div class="hero-titulo">
-                <h1>Frase típica de landing page</h1>
-                <p>Breve descrição ou algo do tipo</p>
+                <h1>Sua proteção contra o clima extremo começa aqui.</h1>
+                <p>Receba alertas, informações em tempo real, dicas de sobrevivência e acessibilidade para todos.</p>
+                <p>Prepare-se para o dia, proteja quem você ama e saiba exatamente o que fazer em situações de risco.</p>
             </div>
+            <!-- <a href="./pages/home.html" class="cta">Começar agora</a> -->
             <div class="hero-banner">
-                <img src="./assets/images/modelo.png" alt="imagem de ">
+                <img src="./assets/images/fundo5.webp" alt="imagem de um senhor em situacao de alagamento">
             </div>
         </section>
         <section class="secao1">
             <div class="descricao">
-                <h2>Destaque de uma funcionalidade</h2>
-                <p>Breve descrição ou algo do tipo</p>
+                <h2>O que o Manual do Tempo faz por você?</h2>
+                <p>Não somos apenas um site de previsão do tempo. Somos um manual de ação para os dias mais difíceis</p>
                 <ul>
                     <li>
-                        <img src="./assets/images/modelo.png" alt="ilustração de ">
-                        <p>Tópico apresentado</p>
+                        <img src="./assets/images/clima3.png" alt="ilustração de previsão de tempo">
+                        <p>Mostra o clima da sua cidade em tempo real</p>
                     </li>
                     <li>
-                        <img src="./assets/images/modelo.png" alt="ilustração de ">
-                        <p>Tópico apresentado</p>
+                        <img src="./assets/images/clima2.png" alt="ilustração de possiveis eventos">
+                        <p>Dá orientações práticas para cada tipo de evento climático</p>
                     </li>
                     <li>
-                        <img src="./assets/images/modelo.png" alt="ilustração de ">
-                        <p>Tópico apresentado</p>
+                        <img src="./assets/images/alertas.png" alt="ilustração de um sino de notificações">
+                        <p>Enviamos notificações personalizadas para te ajudar</p>
                     </li>
                 </ul>
             </div>
             <div class="figura">
-                <img src="./assets/images/modelo.png" alt="imagem de ">
+                <img src="./assets/images/ajuda1.jpg" alt="imagem de duas mãos simbolizando companherismo">
             </div>
         </section>
     </main>
