Update: Imagem leve na landing page

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <main id="landingpage">
         <section class="hero">
             <div class="hero-titulo">
-                <h1>Sua proteção contra o clima extremo começa aqui.</h1>
-                <p>Receba alertas, informações em tempo real, dicas de sobrevivência e acessibilidade para todos.</p>
-                <p>Prepare-se para o dia, proteja quem você ama e saiba exatamente o que fazer em situações de risco.</p>
+                <h1>Sua proteção diária contra o clima extremo começa aqui.</h1>
+                <p>Receba a previsão do tempo da sua cidade, saiba o que fazer em caso de emergência e encontre locais seguros.</p>
+                <p>O Manual do Tempo ajuda você a se preparar para hoje — e para o pior, se ele vier. Acesse, oriente-se e compartilhe. Informação pode salvar vidas.</p>
             </div>
             <!-- <a href="./pages/home.html" class="cta">Começar agora</a> -->
             <div class="hero-banner">
-                <img src="./assets/images/fundo5.webp" alt="imagem de um senhor em situacao de alagamento">
+                <img src="./assets/images/prevencao_site.svg" alt="imagem de uma mulher se previnindo com o site">
             </div>
         </section>
         <section class="secao1">
