--- a/pages/dicas.html
+++ b/pages/dicas.html
@@ -15,7 +15,7 @@
     <header>
         <div class="limite-container">
             <a href="./home.html"><img class="logo" src="../assets/images/logo.png" alt="logo da manual do tempo"></a>
-            <img class="abrir-menu" src="../assets/images/icone-barras.png" alt="ícone de três barras">
+            <span class="abrir-menu"></span>
             <nav class="navegador-paginas">
                 <ul>
                     <li><a href="./home.html">Início</a></li>
@@ -26,16 +26,6 @@
                 </ul>
             </nav>
         </div>
-
-        <nav class="navegador-mobile">
-            <ul>
-                <li><a href="./home.html">Início</a></li>
-                <li><a href="./quemsomos.html">Quem Somos</a></li>
-                <li><a href="./faq.html">Dúvidas</a></li>
-                <li><a href="./contato.html">Contato</a></li>
-                <li><a href="../index.html">Perfil</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
