Concluida funcionalidades de localização de abrigos próximos e eventos climáticos na região

--- a/pages/abrigos.html
+++ b/pages/abrigos.html
@@ -36,47 +36,23 @@
         </section>
         <section class="abrigos-container">
             <ul class="abrigos">
-                <li>
+                <li class="abrigo">
                     <img src="../assets/images/modelo.png" alt="imagem do abrigo">
-                    <div class="avaliacao">
-                        <span class="estrela"></span>
-                    </div>
-                    <p>Endereço</p>
-                    <p>(11) 91234-5678</p>
-                    <p>Horario de atendimento: <span class="horario-atendimento">6h - 18h</span></p>
-                    <a href="#" class="botao">Conferir Rotas</a>
-                </li>
-                <li>
-                    <img src="../assets/images/modelo.png" alt="imagem do abrigo">
-                    <div class="avaliacao">
-                        <span class="estrela"></span>
-                    </div>
-                    <p>Endereço</p>
-                    <p>(11) 91234-5678</p>
-                    <p>Horario de atendimento: <span class="horario-atendimento">6h - 18h</span></p>
-                    <a href="#" class="botao">Conferir Rotas</a>
-                </li>
-                <li>
-                    <img src="../assets/images/modelo.png" alt="imagem do abrigo">
-                    <div class="avaliacao">
-                        <span class="estrela"></span>
-                    </div>
-                    <p>Endereço</p>
-                    <p>(11) 91234-5678</p>
-                    <p>Horario de atendimento: <span class="horario-atendimento">6h - 18h</span></p>
-                    <a href="#" class="botao">Conferir Rotas</a>
-                </li>
-                <li>
-                    <img src="../assets/images/modelo.png" alt="imagem do abrigo">
-                    <div class="avaliacao">
-                        <span class="estrela"></span>
-                    </div>
-                    <p>Endereço</p>
-                    <p>(11) 91234-5678</p>
-                    <p>Horario de atendimento: <span class="horario-atendimento">6h - 18h</span></p>
+                    <p class="endereco">Endereço</p>
+                    <p class="telefone">(11) 91234-5678</p>
+                    <ul class="avaliacao">
+                        <li class="estrela"></li>
+                        <li class="estrela"></li>
+                        <li class="estrela"></li>
+                        <li class="estrela"></li>
+                        <li class="estrela"></li>
+                    </ul>
+                    <p>Recursos disponíveis: <span class="recursos"></span></p>
                     <a href="#" class="botao">Conferir Rotas</a>
                 </li>
             </ul>
+            <p class="sem-abrigos">Não há abrigos encontrados para sua localização. O que acha que procurar para outra
+                localização ao redor? Não esqueça de acessar as dicas de como se preparar sobre um evento climático.</p>
         </section>
     </main>
 
